@@ -2,14 +2,15 @@
 // This file is part of the "Irrlicht Engine".
 // For conditions of distribution and use, see copyright notice in irrlicht.h
 
-#include "IrrCompileConfig.h"
+#include "COpenGLNormalMapRenderer.h"
+
 #ifdef _IRR_COMPILE_WITH_OPENGL_
 
-#include "COpenGLNormalMapRenderer.h"
 #include "IGPUProgrammingServices.h"
 #include "IShaderConstantSetCallBack.h"
 #include "IVideoDriver.h"
 #include "os.h"
+
 #include "COpenGLDriver.h"
 
 namespace irr
